--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -11,6 +11,12 @@
       <div>Type</div>
       <div>{{selected?.type}}</div>
 
+      <div>Checks</div>
+      <div *ngFor="let c of selectedChecks">
+        <button (click)="doCheck(c)">{{c}}</button>
+      </div>
+
+      {{checkResult}}
     </div>
   </div>
 </div>
